# Word_level_slr

./: Data_Extraction.py  Data_augmentation.py  Dataset_structure.md  Info.txt  LICENSE.md  README.md  best_pure_tcn.pth  dataset.txt  extraction.py  interpolation_algo.py  live.py  matrix.py  pure_tcn.py  pyproject.toml
Archive/: Dataset_description.md  Inference.py  Tensor.md  best_slowfast_tcn_model.pth  sign_language_slowfast_tcn.pth  video_augmentation.py  videos_to_tensor.py
Code/: Confusion_Matrix.py  FastMobileEnhancer.py  Live_inference.py  Pure_Tcn.py
Explanations/: Data_Strategy  Dataset_Structure.md  Dataset_structure.md
UI/: design.html
